--- a/components/Tangram.module.css
+++ b/components/Tangram.module.css
@@ -3,9 +3,8 @@
 }
 
 .tangram_container {
-  border: 5px solid red;
+  border: 1vw solid red;
   width: fit-content;
-  /* height: fit-content;
-  aspect-ratio: 1/1; */
+  height: fit-content;
   display: flex;
 }
